<resources>
    <string name="app_name">BoyacáBike</string>
    <string name="registrar">Registrar</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="salir">Salir</string>
    <string name="app_bike_route">Boyacá Bike</string>
    <string name="cerrar_sesion">Cerrar Sesion</string>
    <string name="configuracion">Configuracion</string>
    <string name="mensaje">mensaje</string>
    <string name="menu_mis_rutas">menu_mis_rutas</string>
    <string name="menu_salud">menu_salud</string>
    <string name="mis_rutas">Mis Rutas</string>
    <string name="salud">Salud</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>